[tool.poetry]
name = "cipher_ln2444"
version = "0.1.0"
description = "Python package that allows you to encipher text!"
authors = ["Lavanya <ln2444@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.4.1"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.10.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
